--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -524,6 +524,10 @@
         "error": "Importação não pode ser iniciada: %{error}",
         "success": "Arquivo enviado com sucesso, importação iniciada."
       },
+      "destroy": {
+        "already_finished": "Não foi possível cancelar esta importação pois ela já foi concluída.",
+        "success": "Importação cancelada com sucesso."
+      },
       "update": {
         "error": "Importação não pode ser processada. Por favor tente novamente.",
         "success": "Importação processada com sucesso."
