--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -69,6 +69,8 @@ en:
         import: Import
         skip: Skip
         match: Match
+      confirmation:
+        cancel: Are you sure you want to cancel this import? This action cannot be undone.
       errors:
         reason_label: Reason
         invalid_transaction_to_import: "Invalid transaction: %{error}"
