--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -919,8 +919,11 @@
           "category_label": "Categoria",
           "category_placeholder": "-- Categoria --",
           "date_label": "Data",
+          "error": "Erro ao salvar",
           "import_block_reconciliation_reason": "Não é possível importar pois data é anterior à última reconciliação",
           "name_label": "Nome",
+          "saved": "Salvo",
+          "saving": "Salvando…",
           "submit_button": "Importar Transações",
           "title": "Prévia da Importação"
         },
