Allow user to create import name when previewing an import

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -850,6 +850,7 @@
           "cancel_button": "Cancel",
           "category_label": "Category",
           "category_placeholder": "-- Category --",
+          "create_import_name_label": "Save Import Name",
           "date_label": "Date",
           "error": "Could not save",
           "import_block_reconciliation_reason": "Cannot import because date is prior to latest reconciliation",
