--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -228,6 +228,8 @@ en:
           import_preview_next: Move cursor to next transaction
           import_preview_import: Set transaction to be imported
           import_preview_skip: Set transaction to be ignored
+          date_range_prev: Switch to previous month
+          date_range_next: Switch to next month
     manifest:
       screenshots:
         login_page: Login page
