--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -838,9 +838,9 @@
           "money_saved": "Dif. Saldo",
           "spends": "Gastos",
           "start_balance": "S. Inicial",
-          "sub_header_category_summary": "Resumo das Categorias",
+          "sub_header_category_summary": "Categorias",
           "sub_header_recent_transactions": "Transações Recentes",
-          "sub_header_transactions_summary": "Resumo",
+          "sub_header_transactions_summary": "Posição",
           "title": "Dashboard"
         }
       },
