Switch manual Bootstrap card with BCard for Category and Reconciliation show pages

--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -1128,7 +1128,7 @@
           "enter_mass_edit_transactions": "Edição em Massa",
           "new_transaction": "Nova Transação",
           "real_balance": "Real",
-          "real_balance_info_text": "Isso deve refletir o saldo real da carteira ao final do dia da reconciliação. Isso geralmente é feito contando o dinheiro em espécie, ou verificando o saldo de uma conta bancária, por exemplo.",
+          "real_balance_info_text": "O saldo real deve refletir o valor contabilizado da carteira ao final do dia da reconciliação. Isso significa contar dinheiro em espécie, ou verificar o saldo de uma conta bancária, por exemplo.",
           "status": "Status",
           "sub_header_actions": "Ações",
           "sub_header_balances": "Saldo Geral",
