--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -1239,7 +1239,7 @@
           "edit": "Edit",
           "label_with": "with",
           "reenable": "Reenable",
-          "sub_header_action": "Then fill all these fields",
+          "sub_header_action": "Then fill in these fields",
           "sub_header_conditions": "When any of these conditions are true",
           "sub_header_rules": "Autofill Rules",
           "title": "Transaction Autofill"
