--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -557,7 +557,7 @@ en:
         destroy: Delete
         sub_header_rules: Autofill Rules
         sub_header_conditions: When any of these conditions are true
-        sub_header_action: Then fill all these fields
+        sub_header_action: Then fill in these fields
         label_with: with
         disabled_alert_title: Disabled
         disabled_alert_message: "This transaction autofill is disabled, it will not work until it's enabled again."
