--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -46,6 +46,15 @@ en:
           This category is disabled. It cannot be edited or used for new transactions. Historical data will remain
           accessible.
 
+    components:
+      transaction_automations_list:
+        name_label: Transaction Name
+        category_label: Category
+        wallet_label: Wallet
+        schedule_label: Schedule
+        next_run_label: Next Run
+        amount_label: Amount
+
     dashboard:
       show:
         title: "Welcome, %{name}"
