--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -834,8 +834,11 @@
         "transaction_automations_list": {
           "amount_label": "Valor",
           "category_label": "Categoria",
+          "disable": "Desabilitar",
+          "edit": "Editar",
           "name_label": "Nome da Transação",
           "next_run_label": "Próxima Execução",
+          "reenable": "Reabilitar",
           "schedule_label": "Agendamento",
           "wallet_label": "Carteira"
         }
