--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -54,6 +54,9 @@ pt-BR:
         schedule_label: Agendamento
         next_run_label: Próxima Execução
         amount_label: Valor
+        edit: Editar
+        disable: Desabilitar
+        reenable: Reabilitar
 
     dashboard:
       show:
